html for card 1

--- a/index.html
+++ b/index.html
@@ -26,6 +26,30 @@
             </div>
             <div class="card-right"></div>
         </div>
+        <div class="card-1">
+            <div class="category">Giveaway</div>
+            <h3>Enter and win awsome prices</h3>
+            <button>
+                <a href="#">Read more</a>
+            </button>
+        </div>
+        <div class="card-1">
+            <div class="card-top"></div> 
+            <div class="main-text">
+                <h3>The ultimate list of things you didn't know you could</h3>
+                <p>I whipped the Scotch tape from my pocket and said ...</p>
+            </div>
+            <div class="info">
+                <div class="likes">273</div>
+                <div class="comment">23</div>
+                <div class="publish-time">3 hours ago</div>
+            </div>
+        </div>
+        <div class="card-1">
+            <div class="category">Movies</div>
+            <h3>The warcraft Movies Has Way More Practical Effects</h3>
+            <p>If that assesment sounds like Guldan is important to the...</p>
+        </div>
     </main>
 </body>
 </html>
