--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="card-3 row-2">
+        <div class=" order-1 card-3 row-2">
             <div class="card-left">
                 <div class="main-text">
                     <p class="category">Cars & Moto</p>
@@ -26,14 +26,14 @@
             </div>
             <div class="card-right"></div>
         </div>
-        <div class="card-1 row-3">
+        <div class="order-2 card-1 row-3">
             <div class="category">Giveaway</div>
             <h3>Enter and win awsome prices</h3>
             <button>
                 <a href="#">Read more</a>
             </button>
         </div>
-        <div class="card-1 row-3">
+        <div class="order-3 card-1 row-3">
             <div class="card-top"></div> 
             <div class="main-text">
                 <h3>The ultimate list of things you didn't know you could</h3>
@@ -45,7 +45,7 @@
                 <div class="publish-time">3 hours ago</div>
             </div>
         </div>
-        <div class="card-1 row-3">
+        <div class="order-4 card-1 row-3">
             <div class="category">Movies</div>
             <h3>The warcraft Movies Has Way More Practical Effects</h3>
             <p>If that assesment sounds like Guldan is important to the...</p>
