--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <h3>The warcraft Movies Has Way More Practical Effects</h3>
             <p>If that assesment sounds like Guldan is important to the...</p>
         </div>
+        <div class="card-3"></div>
     </main>
 </body>
 </html>
