--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
             <h3>The warcraft Movies Has Way More Practical Effects</h3>
             <p>If that assesment sounds like Guldan is important to the...</p>
         </div>
-        <div class="card-3"></div>
+        <div class="card-3">
+            <div class="category">Movies</div>
+            <h3>The warcraft Movies Has Way More Practical Effects</h3>
+            <p>If that assesment sounds like Guldan is important to the...</p>
+        </div>
     </main>
 </body>
 </html>
